k8s/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: findmybot-db
  labels:
    app: findmybot-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: findmybot-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: findmybot-db
    spec:
      containers:
        - name: db
          image: ghcr.io/znatom/find-my-bot-db:latest
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: pgdata
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - appuser
                - -d
                - lostfound
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: findmybot-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: findmybot-db
  labels:
    app: findmybot-db
spec:
  ports:
    - port: 5432
      targetPort: postgres
  selector:
    app: findmybot-db
