k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foundit-frontend
  labels:
    app: foundit-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foundit-frontend
  template:
    metadata:
      labels:
        app: foundit-frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/znatom/find-my-bot-frontend:latest
          ports:
            - containerPort: 5173
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: foundit-frontend
  labels:
    app: foundit-frontend
spec:
  type: NodePort # Use NodePort to easily access it on local K8s
  ports:
    - port: 5173
      targetPort: http
      nodePort: 30173 # Fixed nodePort for easy access
  selector:
    app: foundit-frontend
